--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/uuid": "^8.0.0",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
